corrigido relacionamento e chaves das entidades, implementado métodos findEmployeeByName e deleteEmployee